--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.2",
     "date-fns": "^3.6.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
@@ -17,8 +18,10 @@
     "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
-    "sort-by": "^0.0.2"
+    "sort-by": "^0.0.2",
+    "sweetalert2": "^11.10.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
